Publishing Helm Chart v1.0.1 with support for Azure Ingress Controller

--- a/charts/hybriddatapipeline/config/hdpdeploy.properties
+++ b/charts/hybriddatapipeline/config/hdpdeploy.properties
@@ -115,28 +115,6 @@ HDP_DATABASE_ADVANCED_OPTIONS={{.Values.hdp.database.postgres.advancedOptions}}
 HDP_DATABASE_ADVANCED_OPTIONS=
 {{- end }}
 
-; Required but may be set as an environment variable. The name of the database
-; user without administrator privileges. Required privileges depend on the type
-; of database you are using. For details on required privileges, refer to
-; "External system databases":
-; https://docs.progress.com/bundle/datadirect-hybrid-data-pipeline-installation-46/page/External-system-databases.html.
-HDP_DATABASE_USER={{ include "hybriddatapipeline.secretValue" (dict "secretName" "hdp-secrets" "key" "account-database-user-username" "context" $) | trim  }}
-
-; Required but may be set as an environment variable. The password of the
-; database user without administrator privileges.
-HDP_DATABASE_USER_PASSWORD={{ include "hybriddatapipeline.secretValue" (dict "secretName" "hdp-secrets" "key" "account-database-user-password" "context" $) | trim  }}
-
-; Required but may be set as an environment variable. The name of the database
-; user with administrator privileges. Required privileges depend on the type of
-; database you are using. For details on required privileges, refer to "External
-; system databases":
-; https://docs.progress.com/bundle/datadirect-hybrid-data-pipeline-installation-46/page/External-system-databases.html.
-HDP_DATABASE_ADMIN={{ include "hybriddatapipeline.secretValue" (dict "secretName" "hdp-secrets" "key" "account-database-admin-username" "context" $) | trim  }}
-
-; Required but may be set as an environment variable. The password of the
-; database user with administrator privileges.
-HDP_DATABASE_ADMIN_PASSWORD={{ include "hybriddatapipeline.secretValue" (dict "secretName" "hdp-secrets" "key" "account-database-admin-password" "context" $) | trim  }}
-
 ; On-Premises Connector
 ; ---------------------
 ; Specify 'yes' if you plan to deploy the On-Premises Connector.
@@ -146,19 +124,6 @@ HDP_DATABASE_ADMIN_PASSWORD={{ include "hybriddatapipeline.secretValue" (dict "s
 ; Connector. These ports must be made available across the firewall. The default
 ; value is 'yes'.
 HDP_ENABLE_ONPREMISE_CONNECTOR={{ include "boolToYesNo" .Values.hdp.onPremiseConnector.enabled }}
-
-; HDP Logon credentials
-; =====================
-; HDP provides the default d2cadmin and d2cuser accounts. You must specify
-; passwords for each of these accounts with the following properties.
-
-; Required but may be set as an environment variable. The password for the
-; default administrator account.
-HDP_ADMIN_PASSWORD={{ include "hybriddatapipeline.secretValue" (dict "secretName" "hdp-secrets" "key" "hdp-admin-password" "context" $) | trim  }}
-
-; Required but may be set as an environment variable. The password for the
-; default user account.
-HDP_USER_PASSWORD={{ include "hybriddatapipeline.secretValue" (dict "secretName" "hdp-secrets" "key" "hdp-user-password" "context" $) | trim  }}
 
 ; Load balancer
 ; -------------
@@ -186,13 +151,12 @@ HDP_LOAD_BALANCER_HOST_NAME={{ .Values.hdp.loadbalancer.hostName }}
 ; PEM or DER file format.
 ; For more information about creating a PEM file, refer to "The PEM file":
 ; https://docs.progress.com/bundle/datadirect-hybrid-data-pipeline-installation-46/page/The-PEM-file.html.
-HDP_LOAD_BALANCER_CERT_FILE=hdp-cert.pem
 
-; License key
-; -----------
-; Leave blank to deploy an evaluation version of the product.
-; Provide a valid license key to deploy a licensed version of the product.
-HDP_LICENSE_KEY={{ .Values.hdp.licenseKey }}
+{{- if (.Values.hdpingressconfiguration.tls.enabled ) }}
+HDP_LOAD_BALANCER_CERT_FILE=hdp-cert.pem
+{{ else }}
+HDP_LOAD_BALANCER_CERT_FILE=
+{{- end }}
 
 ; FIPS configuration
 ; ------------------
