--- a/charts/hybriddatapipeline/secrets/account-database-secrets.yaml
+++ b/charts/hybriddatapipeline/secrets/account-database-secrets.yaml
@@ -3,6 +3,4 @@ kind: Secret
 metadata:
   name: account-database-secrets
 data:
-  privileged-database-name: cG9zdGdyZXM=
-  privileged-database-username: cG9zdGdyZXM=
-  privileged-database-password: ZG9ja2Vy
+  privileged-postgres-password: 
