--- a/charts/hybriddatapipeline/secrets/hdp-secrets.yaml
+++ b/charts/hybriddatapipeline/secrets/hdp-secrets.yaml
@@ -14,3 +14,4 @@ data:
   account-database-admin-password: 
   account-database-user-username: 
   account-database-user-password: 
+  hdp-license-key: 
