--- a/charts/hybriddatapipeline/templates/hdp-service.yaml
+++ b/charts/hybriddatapipeline/templates/hdp-service.yaml
@@ -1,27 +1,31 @@
 apiVersion: v1
 kind: Service
 metadata:
-  {{- if .Values.haproxy.kubernetesIngress.enabled }}
   annotations:
+    {{- if .Values.hdpingressconfiguration.haproxy.enabled }}
+    haproxy.org/affinity: "cookie"
+    haproxy.org/cookie-persistence: HDP-SESSION
     haproxy.org/check: "{{ .Values.hdp.services.hdpService.check }}"
     haproxy.org/check-http: HEAD {{ .Values.hdp.services.hdpService.checkPath }}
     haproxy.org/check-interval: {{ .Values.hdp.services.hdpService.checkInterval }}
-    haproxy.org/affinity: "cookie"
-    haproxy.org/cookie-persistence: HDP-SESSION
-  {{- end}}  
+    {{- else if .Values.hdpingressconfiguration.agic.enabled }}
+    appgw.ingress.kubernetes.io/probe-path: "{{ .Values.hdp.services.hdpService.check }}"
+    appgw.ingress.kubernetes.io/probe-protocol: HEAD {{ .Values.hdp.services.hdpService.checkPath }}
+    appgw.ingress.kubernetes.io/probe-interval: {{ .Values.hdp.services.hdpService.checkInterval }}
+    {{- end }}
   name: {{ .Release.Name }}-{{ .Values.hdp.services.hdpService.name }}
   namespace: {{ .Release.Namespace }}
 spec:
-  {{- if .Values.haproxy.kubernetesIngress.enabled }}
+  {{- if eq .Values.hdpingressconfiguration.clusterType "cloud" }}
   type: ClusterIP
   {{ else }}
   type: NodePort
-  {{- end}}
+  {{- end }}
   ports:
   - name: hdpserver-port
-    port: {{.Values.hdp.ports.hdpServer.port}}
+    port: {{ .Values.hdp.ports.hdpServer.port }}
     protocol: TCP
-    targetPort: {{.Values.hdp.ports.hdpServer.targetPort}}
+    targetPort: {{ .Values.hdp.ports.hdpServer.targetPort }}
   - name: internal-api-port
     port: 8190
     protocol: TCP
