--- a/charts/hybriddatapipeline/templates/opa-service.yaml
+++ b/charts/hybriddatapipeline/templates/opa-service.yaml
@@ -7,18 +7,24 @@
 apiVersion: v1
 kind: Service
 metadata:
-  {{- if $global.Values.haproxy.kubernetesIngress.enabled }}
   annotations:
+    {{ $opaPath := (printf "%s-%s-%d" $global.Release.Name $global.Values.hdp.services.hdpService.name $ordinal) }}
+    {{- if $global.Values.hdpingressconfiguration.haproxy.enabled }}
     haproxy.org/check: "{{ $global.Values.hdp.services.opAccessorService.check }}"
     haproxy.org/check-http: HEAD {{ $global.Values.hdp.services.opAccessorService.checkPath }}
     haproxy.org/check-interval: {{ $global.Values.hdp.services.opAccessorService.checkInterval }}
-    {{ $opaPath := (printf "%s-%s-%d" $global.Release.Name $global.Values.hdp.services.hdpService.name $ordinal) }}
     haproxy.org/route-acl: path_beg -i {{ $global.Values.hdp.services.opAccessorService.aclPath }}_{{ $opaPath }}
-  {{- end }}    
+    {{- else if $global.Values.hdpingressconfiguration.agic.enabled }}
+    appgw.ingress.kubernetes.io/probe-path: "{{ $global.Values.hdp.services.opAccessorService.check }}"
+    appgw.ingress.kubernetes.io/probe-protocol: HEAD {{ $global.Values.hdp.services.opAccessorService.checkPath }}
+    appgw.ingress.kubernetes.io/probe-interval: {{ $global.Values.hdp.services.opAccessorService.checkInterval }}
+    appgw.ingress.kubernetes.io/request-routing-rules: "PathBasedRouting"
+    appgw.ingress.kubernetes.io/backend-path-prefix: {{ $global.Values.hdp.services.opAccessorService.aclPath }}_{{ $opaPath }}
+    {{- end }}
   name: {{ $global.Release.Name }}-{{ $global.Values.hdp.services.opAccessorService.name }}-{{ $ordinal }}
   namespace: {{ $global.Release.Namespace }}
 spec:
-  {{- if $global.Values.haproxy.kubernetesIngress.enabled }}
+  {{- if eq $global.Values.hdpingressconfiguration.clusterType "cloud" }}
   type: ClusterIP
   {{ else }}
   type: NodePort
