--- a/charts/hybriddatapipeline/tests/notification-service_test.yaml
+++ b/charts/hybriddatapipeline/tests/notification-service_test.yaml
@@ -4,9 +4,10 @@ templates:
   - notification-service.yaml
 
 tests:
-  - it: should render the service with ClusterIP and annotations when haproxy.kubernetesIngress.enabled is true
+  - it: should render the service with ClusterIP and annotations when hdpingressconfiguration.agic.enabled is true
     set:
-      haproxy.kubernetesIngress.enabled: true
+      hdpingressconfiguration.haproxy.enabled: false
+      hdpingressconfiguration.agic.enabled: true
       hdp.services.notificationService.check: true
       hdp.services.notificationService.checkPath: /healthz
       hdp.services.notificationService.checkInterval: 10s
@@ -27,14 +28,15 @@ tests:
           path: spec.ports[0].port
           value: 8080
       - equal:
-          path: metadata.annotations["haproxy.org/check"]
+          path: metadata.annotations["appgw.ingress.kubernetes.io/probe-path"]
           value: "true"
       - equal:
-          path: metadata.annotations["haproxy.org/check-http"]
+          path: metadata.annotations["appgw.ingress.kubernetes.io/probe-protocol"]
           value: "HEAD /healthz"
       - equal:
-          path: metadata.annotations["haproxy.org/check-interval"]
-          value: "10s"
+          path: metadata.annotations["appgw.ingress.kubernetes.io/request-routing-rules"]
+          value: "PathBasedRouting"
       - equal:
-          path: metadata.annotations["haproxy.org/route-acl"]
-          value: "path_end -i /notify"
+          path: metadata.annotations["appgw.ingress.kubernetes.io/backend-path-prefix"]
+          value: "/notify"
+
