Publishing Helm Chart v1.0.1 with support for Azure Ingress Controller.

--- a/charts/hybriddatapipeline/templates/statefulset.yaml
+++ b/charts/hybriddatapipeline/templates/statefulset.yaml
@@ -91,7 +91,7 @@ spec:
               value: /app
           {{- end }}
             - name: ACCEPT_EULA
-              value: "true"
+              value: "{{.Values.hdp.eula.accepted}}"
             - name: HDP_ADMIN_PASSWORD
               valueFrom:
                 secretKeyRef:
